All working fine so far

--- a/assets/style.css
+++ b/assets/style.css
@@ -38,7 +38,7 @@ h6 {
 .wind__speed__container {
     display: flex;
     flex-direction: column;
-    background-color: #389525;
+    background-color: #5d6d95;
     border-radius: 0.55rem;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -75,7 +75,7 @@ h6 {
 }
 
 .graph__container {
-    background-color: #675a11;
+    background-color: #5d6d95;
     border-radius: 0.55rem;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
