Update of network plot upon new data load; button to download network plot; r2py implemented; forest plots automatically updated

--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ h6 {
     font-size: 1em;
 }
 .box__title {
-    font-family: "Times New Roman", Times, serif !important;
+    font-family: "Open Sans", Times, serif !important;
     color: #fff !important;
     letter-spacing: 0.3rem !important;
     padding: 5px 0px 0px 25px;
