added league table on Cinema grading

--- a/assets/style.css
+++ b/assets/style.css
@@ -311,3 +311,11 @@ img:hover {
     border-radius: 10px;
     filter: invert();
 }
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 3.75em;
+  height: 2.125em;
+}
