--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,8 @@ h6 {margin-top: 0;}
 
 .graph__container {
     background-color: #40515e;
+        margin-left: -20px;
+
     border-radius: 0.55rem;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
@@ -86,6 +88,7 @@ h6 {margin-top: 0;}
     background-color: #5d6d95;
     border-radius: 0.55rem;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    margin-left: -20px;
 }
 
 .first {margin-bottom: 15px;}
@@ -318,4 +321,16 @@ img:hover {
   display: inline-block;
   width: 3.75em;
   height: 2.125em;
+}
+
+.export{
+    position: absolute;
+    top: 0px;
+    margin-left: 5px;
+    line-height: 1.3;
+    padding: 4px 4px 4px 4px;
+    vertical-align: top;
+    font-size: 11px;
+    font-type: sans-serif;
+    [...]
 }
