--- a/assets/style.css
+++ b/assets/style.css
@@ -89,6 +89,7 @@ h6 {margin-top: 0;}
     border-radius: 0.55rem;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     margin-left: -20px;
+    /*margin-right: -20px;*/
 }
 
 .first {margin-bottom: 15px;}
@@ -323,7 +324,7 @@ img:hover {
   height: 2.125em;
 }
 
-.export{
+#league_table .export{
     position: absolute;
     top: 0px;
     margin-left: 5px;
@@ -333,4 +334,20 @@ img:hover {
     font-size: 11px;
     font-type: sans-serif;
     [...]
+}
+
+#datatable-upload-container .export{
+    position: absolute;
+    top: 7px;
+    margin-left: 5px;
+    line-height: 1.3;
+    padding: 4px 4px 4px 4px;
+    vertical-align: top;
+    font-size: 11px;
+    font-type: sans-serif;
+    [...]
+}
+
+#dd_nclr_input .dropdown-menu {
+:not(.dropdown-item)
 }
