--- a/assets/app.css
+++ b/assets/app.css
@@ -31,6 +31,53 @@ PLotly.js
     z-index: 1002;
 }
 
+/*!
+ * Bootswatch v4.6.0
+ * Homepage: https://bootswatch.com
+ * Copyright 2012-2021 Thomas Park
+ * Licensed under MIT
+ * Based on Bootstrap
+*//*!
+ * Bootstrap v4.6.0 (https://getbootstrap.com/)
+ * Copyright 2011-2021 The Bootstrap Authors
+ * Copyright 2011-2021 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
+ */
+@import url(https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap);
+:root {
+    --app-background-color:#1b242b;
+    --dropdownmenu-hover-background-color: #798d8f;
+    --blue: #2c3e50;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #e74c3c;
+    --orange: #fd7e14;
+    --yellow: #f39c12;
+    --green: #18bc9c;
+    --teal: #20c997;
+    --cyan: #3498db;
+    --white: #fff;
+    --gray: #95a5a6;
+    --gray-dark: #343a40;
+    --primary: #2c3e50;
+    --secondary: #95a5a6;
+    --success: #18bc9c;
+    --info: #3498db;
+    --warning: #f39c12;
+    --danger: #e74c3c;
+    --light: #ecf0f1;
+    --dark: #7b8a8b;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
+    --font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
+}
+
+
 Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
@@ -50,7 +97,7 @@ Grid
 @media (min-width: 400px) {  .container { width: 85%; padding: 0; }  }
 /* For devices larger than 550px */
 @media (min-width: 550px) {
-    .container {width: 80%;}
+    .container {width: 85%;}
     .column,
     .columns {margin-left: 4%;}
     .column:first-child,
@@ -70,7 +117,9 @@ Grid
     .twelve.columns {width: 100%;margin-left: 0;}
     .one-third.column {width: 30.6666666667%;}
     .two-thirds.column {width: 65.3333333333%;}
-    .one-half.column {width: 48%;}
+    .one-half.column {width: 44%;}
+    .one-half-2.column {width: 52%}
+
     /* Offsets */
     .offset-by-one.column,
     .offset-by-one.columns {margin-left: 8.66666666667%;}
@@ -415,51 +464,7 @@ there.
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {  }
 
-/*!
- * Bootswatch v4.6.0
- * Homepage: https://bootswatch.com
- * Copyright 2012-2021 Thomas Park
- * Licensed under MIT
- * Based on Bootstrap
-*//*!
- * Bootstrap v4.6.0 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
-@import url(https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap);
-:root {
-    --app-background-color: #1b242b;
-    --dropdownmenu-hover-background-color: #798d8f;
-    --blue: #2c3e50;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #e83e8c;
-    --red: #e74c3c;
-    --orange: #fd7e14;
-    --yellow: #f39c12;
-    --green: #18bc9c;
-    --teal: #20c997;
-    --cyan: #3498db;
-    --white: #fff;
-    --gray: #95a5a6;
-    --gray-dark: #343a40;
-    --primary: #2c3e50;
-    --secondary: #95a5a6;
-    --success: #18bc9c;
-    --info: #3498db;
-    --warning: #f39c12;
-    --danger: #e74c3c;
-    --light: #ecf0f1;
-    --dark: #7b8a8b;
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
-    --font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
-}
+
 
 *, ::after, ::before {
     box-sizing: border-box
