effect measures added

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,8 @@
 :root {
-   --CLR_BCKGRND: #1b242b /*CLR BACKGROUND BLACK*/
+/*    --CLR_BCKGRND: #1e252f*/
+    /*--CLR_BCKGRND: #364b54*/
+    --CLR_BCKGRND: #1b242b /*CLR BACKGROUND BLACK*/
+
 }
 
 body {
