--- a/assets/style.css
+++ b/assets/style.css
@@ -71,8 +71,8 @@ h6 {margin-top: 0;}
     font-family: "Open Sans", Times, serif !important;
     color: #fff !important;
     letter-spacing: 0.3rem !important;
-    padding: 5px 15px 5px 15px;
-    margin-bottom: -20px !important;
+    padding: 15px 15px 5px 15px;
+    margin-bottom: -10px !important;
     font-size: 1em;
 }
 
@@ -112,7 +112,6 @@ h6 {margin-top: 0;}
     background-color: #40515e;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
-
 
 
 .first {margin-bottom: 15px;}
@@ -322,6 +321,7 @@ img:hover {
 :not(.dropdown-item)
 }
 
+
 .rc-slider-track {
   background-color: #7e95cc;
 }
@@ -414,7 +414,31 @@ img:hover {
             float:right;
             margin-left:50%}
 
+.navbar-nav {
+  display: inline-block;
+    flex-direction: row !important;   /* what makes link be inline */
+      float: right;
+}
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  width: 100px !important;
+  float: right !important;
+}
+
+li a {
+  display: block !important;
+  color: white;
+  text-align: center;
+  padding: 0px 0px;
+  text-decoration: none;
+}
 
 
 @media (min-width:962px){
@@ -430,6 +454,6 @@ img:hover {
 /* NAVBAR color */
 @keyframes
 button.bg-light:hover{background-color:#dae0e5!important}
-.bg-dark{background-color: var(--CLR_BCKGRND) !important}  a.bg-dark:focus,a.bg-dark:hover,button.bg-dark:focus
-
+.bg-dark{background-color: #36726e !important}  a.bg-dark:focus,a.bg-dark:hover,button.bg-dark:focus
+/*var(--CLR_BCKGRND)*/
 
